sin wave working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div class="map">
-
-<div class="point" #point ></div>
-
+  <div #lines></div>
+  <div class="point" #point style="transform: translateX(-5px) translateY(-5px); transform-origin: center;"></div>
 </div>
 <div class="control"></div>
 
