--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 .map {
   height: 90vh;
   width: 90vw;
-  border: 1px solid black;
+ // border: 1px solid black;
   position: relative;
 }
 
@@ -14,5 +14,5 @@
   left: 10px;
 
   background-color: rebeccapurple;
- 
+
 }
